compiling_error.txt
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp: In function 'int main()':
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:63:32: error: cannot convert 'std::__cxx11::string {aka std::__cxx11::basic_string<char>}' to 'char*' for argument '1' to 'char* gets(char*)'
                 gets(nome_livro);
                                ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:68:16: error: jump to case label [-fpermissive]
           case 6 :
                ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:52:20: note:   crosses initialization of 'std::__cxx11::string nome_livro'
             string nome_livro;
                    ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:74:16: error: jump to case label [-fpermissive]
           case 7 :
                ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:52:20: note:   crosses initialization of 'std::__cxx11::string nome_livro'
             string nome_livro;
                    ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:80:16: error: jump to case label [-fpermissive]
           case 8 :
                ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:52:20: note:   crosses initialization of 'std::__cxx11::string nome_livro'
             string nome_livro;
                    ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:86:16: error: jump to case label [-fpermissive]
           case 9 :
                ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:52:20: note:   crosses initialization of 'std::__cxx11::string nome_livro'
             string nome_livro;
                    ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:92:16: error: jump to case label [-fpermissive]
           case 10 :
                ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:52:20: note:   crosses initialization of 'std::__cxx11::string nome_livro'
             string nome_livro;
                    ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:98:16: error: jump to case label [-fpermissive]
           case 11 :
                ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:52:20: note:   crosses initialization of 'std::__cxx11::string nome_livro'
             string nome_livro;
                    ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:104:16: error: jump to case label [-fpermissive]
           case 12 :
                ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:52:20: note:   crosses initialization of 'std::__cxx11::string nome_livro'
             string nome_livro;
                    ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:110:15: error: jump to case label [-fpermissive]
          case 13 :
               ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:52:20: note:   crosses initialization of 'std::__cxx11::string nome_livro'
             string nome_livro;
                    ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:150:16: error: jump to case label [-fpermissive]
           case 0 :
                ^
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:52:20: note:   crosses initialization of 'std::__cxx11::string nome_livro'
             string nome_livro;
                    ^
